src/objects/CST_App_Menu_Pool_GLBL__c.object
<CustomObject>
    <description>This object is used to collect &amp; store the unique values of a particular source data set which is then subsequently used to populate the menu options in a related CST App Settings record.

Stamped GLBL because this data could be used by other applications as it reflects Account data and nothing specific to the Customer Search Tool</description>
    <fields>
        <fullName>Altrnt_Id_Typ_Desc_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Altrnt_Id_Typ_Desc Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Altrnt_Id_Typ_Desc_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Altrnt_Id_Typ_Desc_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>App_Settings_CUST__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This pool record is tied to a particular entry in the CST App Settings object.</description>
        <inlineHelpText>This pool record is tied to a particular entry in the CST App Settings object.</inlineHelpText>
        <label>App Settings</label>
        <referenceTo>CST_App_Settings_CUST__c</referenceTo>
        <relationshipLabel>CST App Menu Pools</relationshipLabel>
        <relationshipName>CST_App_Menu_Pools</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>App_Settings_Unique_Check_CUST__c</fullName>
        <description>Id of related App Settings. Enforces Uniqueness and populated by a workflow when Lookup is set.</description>
        <inlineHelpText>Id of related App Settings. Enforces Uniqueness and populated by a workflow when Lookup is set.</inlineHelpText>
        <label>App Settings Unique Check</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Bnft_Dsgn_Cd_Capture_Date_GLBL__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Bnft_Dsgn_Cd Capture Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bnft_Dsgn_Cd_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Bnft_Dsgn_Cd_GLBL__c to populate the Account_Bnft_Dsgn_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Bnft_Dsgn_Cd_GLBL__c to populate the Account_Bnft_Dsgn_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Bnft_Dsgn_Cd_GLBL__c</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clsfctn_Cd_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Clsfctn_Cd Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clsfctn_Cd_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Clsfctn_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Clsfctn_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Clsfctn_Cd_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cnsnt_Prps_Cd_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Cnsnt_Prps_Cd Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cnsnt_Prps_Cd_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Cnsnt_Prps_Cd_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cnsnt_Sts_Cd_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Cnsnt_Sts_Cd Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cnsnt_Sts_Cd_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Cnsnt_Sts_Cd_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>InteractionChannelTypeDate_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Interaction_Channel_Type Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interaction_Channel_Type_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Interaction_Channel_Type_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Job_Status_GLBL__c</fullName>
        <description>Information about the last collection run</description>
        <inlineHelpText>Information about the last collection run</inlineHelpText>
        <label>Last Job Status</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Party_Sts_Cd_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Party_Sts_Cd Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Party_Sts_Cd_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Party_Sts_Cd_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Priority_Rank_Nbr_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Priority_Rank_Nbr Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Priority_Rank_Nbr_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Priority_Rank_Nbr_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rltnshp_Typ_Desc_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Rltnshp_Typ_Desc Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rltnshp_Typ_Desc_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Rltnshp_Typ_Desc_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spclty_Desc_Cd_Capture_Date_GLBL__c</fullName>
        <description>Records when these values were collected</description>
        <inlineHelpText>Records when these values were collected</inlineHelpText>
        <label>Spclty_Desc_Cd Capture Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Spclty_Desc_Cd_GLBL__c</fullName>
        <description>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</description>
        <inlineHelpText>Holds distinct values collected from Account.Clsfctn_Cd_GLBL to populate the Account_Party_Sts_Cd_CUST__c field in the CST App Settings</inlineHelpText>
        <label>Spclty_Desc_Cd_GLBL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>CST App Menu Pool</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CSTPOOL-{0000}</displayFormat>
        <label>CST App Menu Pool Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CST App Menu Pools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>